# ycp-robot

./: .gitignore  .project  0001-Added-Serial-Package-which-currently-publishes-ultra.patch  README  SensorSideAvoidanceTest.launch  runAll.sh  setup.sh  test.yaml  virtLaunch.launch
Documents/: assign6.lyx  (+6 more)
hogman_minimal/hogman_minimal/: CMakeLists.txt  mainpage.dox
hogman_minimal/hogman_minimal/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/.svn/text-base/: manifest.xml.svn-base
hogman_minimal/hogman_minimal/include/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/csparse/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/graph/: loadEdges3d.h  posegraph2d.h  posegraph3d.h  posegraph3d_gradient.h
hogman_minimal/hogman_minimal/include/hogman_minimal/graph/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer/: graph_optimizer.h  graph_optimizer2d.h  graph_optimizer3d.h
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer/.svn/text-base/: graph_optimizer2d_aux.h.svn-base
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer_hogman/: csparse_helper.h  graph_optimizer2d_chol.h  graph_optimizer3d_chol.h  graph_optimizer_chol.hpp  graph_optimizer_hchol.hpp
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer_hogman/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_optimizer_hogman/.svn/text-base/: graph_optimizer2d_hchol.h.svn-base  graph_optimizer3d_hchol.h.svn-base  graph_optimizer_hchol_aux.hpp.svn-base  graph_optimizer_hchol_batch.hpp.svn-base  graph_optimizer_hchol_incremental.hpp.svn-base
hogman_minimal/hogman_minimal/include/hogman_minimal/graph_viewer/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/math/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/include/hogman_minimal/stuff/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/csparse/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/graph/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/graph/.svn/text-base/: posegraph3d.cpp.svn-base
hogman_minimal/hogman_minimal/src/graph_optimizer/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/graph_optimizer/.svn/text-base/: graph_optimizer.h.svn-base
hogman_minimal/hogman_minimal/src/graph_optimizer_hogman/: csparse_helper.h  graph_optimizer3d_hchol.h
hogman_minimal/hogman_minimal/src/graph_optimizer_hogman/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/graph_optimizer_hogman/.svn/text-base/: graph_optimizer2d_hchol.h.svn-base  graph_optimizer_chol.h.svn-base  hogman2d.cpp.svn-base  hogman3d.cpp.svn-base
hogman_minimal/hogman_minimal/src/graph_viewer/: graph_viewer.cpp  main_widget.cpp  pose_graph_vis3d.cpp  vrml_output.cpp
hogman_minimal/hogman_minimal/src/graph_viewer/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/graph_viewer/.svn/text-base/: matrix4x4.cpp.svn-base  vrml_output.h.svn-base
hogman_minimal/hogman_minimal/src/math/: vector_n.h
hogman_minimal/hogman_minimal/src/math/.svn/: all-wcprops  entries
hogman_minimal/hogman_minimal/src/stuff/.svn/: all-wcprops  entries
(+1632 files in other folders)
